--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@alpinejs/collapse": "3.12.3",
+    "@astrojs/react": "^4.1.6",
     "@astrojs/tailwind": "^5.1.4",
     "@fontsource/inter": "5.0.8",
     "@types/alpinejs": "3.7.2",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "alpinejs": "3.12.3",
     "astro": "^5.1.5",
     "astro-compress": "^2.3.6",
+    "photoswipe": "^5.4.4",
     "prettier": "3.0.2",
     "prettier-plugin-astro": "0.12.0",
     "prettier-plugin-tailwindcss": "0.5.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "3.3.3"
   }
 }
