--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier-plugin-tailwindcss": "0.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "sonner": "^2.0.1",
     "tailwindcss": "3.3.3"
   }
